--- a/7CICDJob/Jenkinsfile
+++ b/7CICDJob/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
     }
     stage("Test") {
       steps {
-        dir(]"simple-java-maven-app") {
+        dir("simple-java-maven-app") {
           sh "mvn test"
         }
       }
