--- a/10CronJob/Jenkinsfile
+++ b/10CronJob/Jenkinsfile
@@ -6,7 +6,8 @@ pipeline {
       steps {
         echo "This should execute the first day of each month. \n"
         echo "At 12:00 AM, on day 1 of the month. \n"
-        echo "0 0 1 * *"
+        echo "0 0 1 * *\n"
+        echo "TimeStamp: ${currentBuild.startTimeInMillis}"
       }
     }
   }
